# sort

./: .cmake-format.py  Algorithms.cpp  CMakeLists.txt  Graphics.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  Run.cpp  Run.h
src/: Algorithms.cpp  Algorithms.h  Graphics.cpp  Graphics.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Run.cpp  SortItem.cpp  SortItem.h  WikiSort.cpp  main.cpp
